# os

 lab5_task1/: CMakeLists.txt  fff.cpp  main.cpp
10_1/: CMakeLists.txt  main.cpp
10_1_lib/: CMakeLists.txt  quadratic_solver.cpp  quadratic_solver.h
10_2/: CMakeLists.txt
10_2_lib/: CMakeLists.txt  library.cpp  library.h  main.cpp  main.h
10_3/: CMakeLists.txt
10_3/examples/: CMakeLists.txt  cppExample.cpp  pythonExample.py
10_3/src/: CMakeLists.txt  StudentDatabase.cpp  StudentDatabase.h  StudentDatabaseCApi.cpp  StudentDatabaseCApi.h  StudentDatabaseWrapper.cpp  StudentDatabaseWrapper.h
3_1/: CMakeLists.txt  main.cpp
3_2/: CMakeLists.txt  main.cpp
3_4/: CMakeLists.txt  main.cpp
6_1/: CMakeLists.txt  MemoryManager.h  main.cpp
6lab2/: CMakeLists.txt  main.cpp
8_1/: CMakeLists.txt  main.cpp
8_2/: CMakeLists.txt  main.cpp
9_2/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  WhiteboardApp.cpp  WhiteboardApp.h  main.cpp
lab1/: CMakeLists.txt
lab1/task1/: main.cpp
lab1_task2/: CMakeLists.txt  main.cpp
lab1_task3/: CMakeLists.txt  SysInfo.cpp  main.cpp
lab1_task3/headers/: SysInfo.h
lab1_task4/: CMakeLists.txt  solution.sh
lab1vs/lab1/: lab1.sln
lab1vs/lab1/lab1/: lab1.cpp  lab1.vcxproj
lab1vs/lab1/lab1/x64/Debug/: lab1.exe.recipe  lab1.ilk  vc143.idb
lab1vs/lab1/lab1/x64/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1vs/lab1/task2/: task2.vcxproj
lab2_task1/: CMakeLists.txt  main.cpp
lab2_task2/: CMakeLists.txt  main.cpp
lab2_task3/: CMakeLists.txt  main.cpp
lab4_task1/: CMakeLists.txt  main.cpp
lab4_task2/: CMakeLists.txt  main.cpp
lab5_task2/: BgThreadDispatcher.h  CMakeLists.txt  main.cpp  tests.cpp
lab9_1/: CMakeLists.txt  main.cpp
os_7_1/: CMakeLists.txt  main.cpp
os_7_2/: CMakeLists.txt  main.cpp
